# SNAP-tFDP

./: CMakeLists.txt  LICENSE  README.md
apps/: run_fr.cpp  run_pmds.cpp  snap_tfdp.cpp
include/: graph.h  layout.h  np.h  utils.h
scripts/benchmark/: 1-1-run-pmds.sh  1-10-run-fr.sh  1-11-run-tsnet.sh  1-2-run-nsgl.sh  1-3-run-nsgl_p16.sh  1-4-run-nsgl_gpu.sh  1-5-run-tfdp_ibfft_cpu.sh  1-6-run-drgraph.sh  1-7-run-sfdp.sh  1-8-run-fa2.sh  1-9-run-linlog.sh  2-parse-time-mem.sh  3-metrics.sh  4-1-plot-metrics.sh  4-2-plot-time.sh  plot_metrics.py  plot_time.py
scripts/case-study/: 1-run.sh
scripts/fig1/: 1-run.sh
src/graph/: graph.cpp
src/layout/: ours.cpp  ours_cpu_parallel.cpp  ours_gpu.cpp
src/layout/gpu/: layout_step.cu
src/metrics/: np.cpp
statistics/benchmark/: ari.csv  mem.csv  np2.csv  si.csv  time.csv
statistics/comparison_parallel/: ari.csv  mem.csv  np2.csv  si.csv  time.csv
tools/: metrics_all.py
tools/metrics/: __init__.py  ari.py  cd.py  cs.py  icap.py  qgg.py  si.py
